--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -38,6 +38,7 @@
             left: 0;
             top: 0;
             z-index: 1;
+            pointer-events: none;
 
             & video,
             & img {
